added small mobile styling tweaks. Still trying to kill the game form bug.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,6 +55,10 @@ Signup / Login Page Styling
   transition: transform 0.5s;
 }
 
+.gameForm {
+  min-height: 92vh;
+}
+
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 800px) {
 
