--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -581,10 +581,11 @@ Signup / Login Page Styling
     flex-direction: column;
     justify-content: space-around;
     min-height: 92vh;
+    padding: 1rem;
     overflow: scroll;
   }
 
-  .form-group {
+  .filedset {
     padding-top: 1rem;
     height: 2rem;
   }
