--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,19 @@
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active
+{
+    box-shadow: none!important;
+}
+
 /***********************************
 Signup / Login Page Styling
 ************************************/
