--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -254,11 +254,11 @@ Signup / Login Page Styling
     border: none;
     border-radius: 0px;
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-    margin: 0px auto 0.7rem auto;
+    margin: 0px 0.7rem 0.7rem;
     min-height: 2rem;
     padding: 10px;
     padding-left: 0px;
-    width: 100%;
+    /*width: 95%;*/
   }
 
   .each_game a {
@@ -268,12 +268,31 @@ Signup / Login Page Styling
   .game_initial {
     align-items: center;
     background-color: #02558b;
+    /*background-color: transparent;*/
     border-radius: 50%;
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-basis: 3rem;
     justify-content: center;
     margin: 0rem 1rem;
+  }
+
+  .game_initial i {
+    color: white;
+    /*font-size: 36px;*/
+    /*padding: 0.5rem 1rem;*/
+  }
+
+  .game_initial #card {
+    transform: rotate(180deg);
+    /* Safari */
+    -webkit-transform: rotate(180deg);
+    /* Firefox */
+    -moz-transform: rotate(180deg);
+    /* IE */
+    -ms-transform: rotate(180deg);
+    /* Opera */
+    -o-transform: rotate(180deg);
   }
 
   .game_initial h3 {
@@ -496,9 +515,22 @@ Signup / Login Page Styling
   }
 
   #game_rules {
+    box-shadow: inset 0px -3px 10px 3px rgba(200, 200, 200, 0.2);
     color: gray;
+    font-size: 18px;
+    height: 12rem;
     margin: 0rem auto;
-    width: 90%;
+    overflow: hidden;
+    padding: 0.5rem;
+    width: 100%;
+  }
+
+  .read_more {
+    background: linear-gradient(to bottom, transparent, #fdfdff 50%);
+    color: #2cf;
+    margin-top: -1.5rem;
+    padding: 0.5rem;
+    text-align: center;
   }
 
   .alt_rules {
@@ -585,6 +617,17 @@ Signup / Login Page Styling
     color: white;
     margin-top: 2rem;
     width: 20%;
+  }
+
+  .material-icons.md-36.top_arrow {
+    background-color: #ff533d;
+    border-radius: 50%;
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    color: white;
+    padding: 0.75rem;
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
   }
 
   /***********************************
