--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -629,7 +629,7 @@ Signup / Login Page Styling
     padding: 0.75rem;
     position: fixed;
     bottom: 1rem;
-    right: 1rem;
+    right: 0.4rem;
   }
 
   /***********************************
@@ -682,6 +682,7 @@ Signup / Login Page Styling
   }
 
   textarea {
+    height: 9rem;
     resize: none;
   }
 
