--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -62,8 +62,15 @@ Signup / Login Page Styling
     display: none;
 }
 
-.Logo {
+.topnav .Logo {
   font-family: 'Righteous', sans-serif;
+  padding-left: 0rem;
+  width: 50%;
+}
+
+.Logo img {
+  margin-right: 0.5rem;
+  width: 15%;
 }
 
 .material-icons {
@@ -90,16 +97,24 @@ Signup / Login Page Styling
     height: 0;
   }
 
+  .topnav .Logo {
+    margin-left: -1.4rem;
+    padding-left: 1rem;
+  }
+
   .topnav .icon {
     color: white;
-    opacity: 1;
-    height: 3rem;
-    width: 3rem;
-    float: right;
     display: block;
+    float: right;
+    font-size: 24px;
+    height: 2rem;
+    opacity: 1;
+    position: absolute;
+    right: 0.5rem;
     text-align: center;
-    padding: .7rem;
+    top: 0.5rem;
     transition: transform 0.5s;
+    width: 2rem;
   }
 
   .topnav .GamesLink, .topnav .NewGameLink, .topnav .LogOutLink, .topnav .AboutLink {
@@ -107,7 +122,7 @@ Signup / Login Page Styling
   }
 
   .topnav a:hover {
-      background-color: transparent;
+    background-color: transparent;
   }
 
   .form-group {
@@ -142,8 +157,10 @@ Signup / Login Page Styling
   .topnav.responsive .icon {
     color: white;
     position: absolute;
-    right: 0;
-    top: 0;
+    height: 2rem;
+    right: 0.5rem;
+    top: 0.5rem;
+    width: 2rem;
   }
 
   .topnav.responsive a {
@@ -151,6 +168,11 @@ Signup / Login Page Styling
     opacity: 1;
     height: 20px;
     text-align: left;
+  }
+
+  .topnav.responsive .Logo {
+    margin-left: 0rem;
+    padding-left: 1rem;
   }
 
   /*.topnav.responsive a:hover {
@@ -527,9 +549,11 @@ Signup / Login Page Styling
   }
 
   .read_more {
-    background: linear-gradient(to bottom, transparent, #fdfdff 50%);
+    background: linear-gradient(to bottom, transparent, #fdfdff 30%);
     color: #02558b;
+    height: 3rem;
     margin-top: -1rem;
+    margin-bottom: 3rem;
     padding: 0.5rem;
     text-align: center;
     text-transform: uppercase;
@@ -538,7 +562,13 @@ Signup / Login Page Styling
   .alt_rules {
     border-radius: 0px;
     color: gray;
-    padding-left: 5rem;
+    padding: 1rem;
+  }
+
+  #delete_rules_button {
+    color: transparent;
+    float: right;
+    margin-top: 2rem;
   }
 
   .alert h4 {
@@ -596,14 +626,14 @@ Signup / Login Page Styling
     color: #2cf;
   }
 
-  .each_alternate .alternate_objective, .each_alternate .alternate_rules {
-    color: gray;
-  }
-
   .each_alternate .arrowButton {
     color: gray;
     margin: 0rem;
     padding: 0rem;
+  }
+
+  .each_alternate .alternate_objective, .each_alternate .alternate_rules {
+    color: gray;
   }
 
   .each_alternate .game_labels {
